fix menu on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,21 @@ nav {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 0;
+    width: 32px;
+    height: 22px;
+    position: relative;
+}
+
+.menu-toggle::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 2px;
+    height: 2px;
+    background-color: #333;
+    box-shadow: 0 7px 0 #333, 0 14px 0 #333;
 }
 
 /* Page title */
